name:               hsc
version:            0.1
synopsis:           Haskell Supercompiler Project
description:        The Haskell Supercompiler Project uses supercompilation
                    techniques to optimize Haskell applications.
                    Also uses supercompilation to prove properties
                    of Haskell programs.
author:             Luis Mastrangelo
maintainer:         luis.mastrangelo@usi.ch
category:           Language
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

executable hsc
  main-is:          Main.hs
  build-depends:    base >=4.8, mtl >= 2.2.1, haskell-src-exts >=1.17,
                    filepath, MissingH
  hs-source-dirs:   .
  default-language: Haskell98
  ghc-options:      -fno-ignore-asserts

executable test-parser
  main-is:          TestParser.hs
  build-depends:    base >= 4.8, tasty >= 0.11, tasty-hunit >= 0.9.2,
                    tasty-smallcheck >= 0.8.1
  hs-source-dirs:   . test
  default-language: Haskell98

executable test-expr
  main-is:          TestExpr.hs
  build-depends:    base >= 4.8, tasty >= 0.11, tasty-hunit >= 0.9.2
  hs-source-dirs:   . test
  default-language: Haskell98

executable test-eval
  main-is:          TestEval.hs
  build-depends:    base >= 4.8, tasty >= 0.11, tasty-hunit >= 0.9.2
  hs-source-dirs:   . test
  default-language: Haskell98

executable test-splitter
  main-is:          TestSplitter.hs
  build-depends:    base >= 4.8, tasty >= 0.11, tasty-hunit >= 0.9.2
  hs-source-dirs:   . test
  default-language: Haskell98

executable test-simplifier
  main-is:          TestSimplifier.hs
  build-depends:    base >= 4.8, tasty >= 0.11, tasty-hunit >= 0.9.2
  hs-source-dirs:   . test
  default-language: Haskell98

executable test-match
  main-is:          TestMatch.hs
  build-depends:    base >= 4.8, tasty >= 0.11, tasty-hunit >= 0.9.2,
                    mtl >= 2.2.1
  hs-source-dirs:   . test
  default-language: Haskell98

executable test-supercompiler
  main-is:          TestSupercompiler.hs
  build-depends:    base >= 4.8, tasty >= 0.11, tasty-hunit >= 0.9.2,
                    tasty-smallcheck >= 0.8.1, mtl >= 2.2.1
  hs-source-dirs:   . test
  default-language: Haskell98
