name:               hsc
version:            0.9.1
cabal-version:      >=1.10
build-type:         Simple
license:            BSD3
license-file:       LICENSE
author:             Luis Mastrangelo
maintainer:         luis.mastrangelo@usi.ch
stability:          alpha
homepage:           https://github.com/acuarica/hsc
category:           Language
extra-source-files: README.md
synopsis:           Haskell Supercompiler Project
description:        The Haskell Supercompiler Project uses supercompilation
                    techniques to optimize Haskell applications.
                    Also uses supercompilation to prove properties
                    of Haskell programs.
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/acuarica/hsc.git

library
  exposed-modules:  Parser, Expr, Eval, Match, Supercompiler
  build-depends:    base >= 4.8 && < 5, mtl >= 2.2.1
  hs-source-dirs:   .
  default-language: Haskell98

executable hsc
  main-is:          Main.hs
  build-depends:    base >=4.8 && < 5, mtl >= 2.2.1,
                    haskell-src-exts >=1.17, filepath, containers
  hs-source-dirs:   .
  default-language: Haskell98
  ghc-options:      -fno-ignore-asserts

executable test-parser
  main-is:          TestParser.hs
  build-depends:    base >= 4.8 && < 5, tasty >= 0.11,
                    tasty-hunit >= 0.9.2, tasty-smallcheck >= 0.8.1
  hs-source-dirs:   . test
  default-language: Haskell98

executable test-expr
  main-is:          TestExpr.hs
  build-depends:    base >= 4.8 && < 5, tasty >= 0.11, tasty-hunit >= 0.9.2
  hs-source-dirs:   . test
  default-language: Haskell98

executable test-eval
  main-is:          TestEval.hs
  build-depends:    base >= 4.8 && < 5, tasty >= 0.11, tasty-hunit >= 0.9.2
  hs-source-dirs:   . test
  default-language: Haskell98

executable test-match
  main-is:          TestMatch.hs
  build-depends:    base >= 4.8 && < 5, tasty >= 0.11, tasty-hunit >= 0.9.2
  hs-source-dirs:   . test
  default-language: Haskell98

executable test-supercompiler
  main-is:          TestSupercompiler.hs
  build-depends:    base >= 4.8 && < 5, tasty >= 0.11,
                    tasty-hunit >= 0.9.2, tasty-quickcheck >= 0.8.1,
                    mtl >= 2.2.1
  hs-source-dirs:   . test
  default-language: Haskell98

executable prof-parser
  main-is:          ProfParser.hs
  build-depends:    base >= 4.8 && < 5, deepseq >= 1.4
  hs-source-dirs:   . prof
  default-language: Haskell98
  ghc-options:      -O2 -rtsopts

executable prof-fastparser
  main-is:          ProfFastParser.hs
  build-depends:    base >= 4.8 && < 5, deepseq >= 1.4
  hs-source-dirs:   . prof
  default-language: Haskell98
  ghc-options:      -O2 -rtsopts




test-suite test-suite-expr
  type: exitcode-stdio-1.0
  main-is:          TestExpr.hs
  build-depends:    base >= 4.8 && < 5, tasty >= 0.11, tasty-hunit >= 0.9.2
  hs-source-dirs:   . test
  default-language: Haskell98
