Name:               hermit-century-lemmas
Version:            0.3
Synopsis:           Additional HERMIT lemmas for the `Making a Century' case study.
Category:
Description:        Additional HERMIT lemmas for the `Making a Century' case study, which is based on the chapter in Richard Bird's `Pearls of Functional Algorithm Design'.
Author:             Andrew Farmer and Neil Sculthorpe
Maintainer:         Andrew Farmer <afarmer@ittc.ku.edu>
Copyright:          (c) 2015 The University of Kansas
License:            BSD3
License-file:       LICENSE
Stability:          experimental
build-type:         Simple
Cabal-Version:      >= 1.10

Library
  Build-Depends:
    base >= 4 && < 5,
    containers,
    ghc >= 7.8,
    hermit >= 1.0.0.0,
    transformers
  default-language: Haskell2010
  Ghc-Options:      -Wall
  Exposed-Modules:  HERMIT.Libraries.Century
