name: containers
version: 0.5.5.1
license: BSD3
license-file: LICENSE
maintainer: fox@ucw.cz
bug-reports: https://github.com/haskell/containers/issues
synopsis: Assorted concrete container types
category: Data Structures
description:
    This package contains efficient general-purpose implementations
    of various basic immutable container types.  The declared cost of
    each operation is either worst-case or amortized, but remains
    valid even if structures are shared.
build-type: Simple
cabal-version:  >=1.8
extra-source-files:
    include/Typeable.h
    tests/Makefile
    tests/*.hs
    benchmarks/Makefile
    benchmarks/bench-cmp.pl
    benchmarks/bench-cmp.sh
    benchmarks/*.hs
    benchmarks/SetOperations/Makefile
    benchmarks/SetOperations/*.hs
    benchmarks/LookupGE/Makefile
    benchmarks/LookupGE/*.hs
    laws/Functor.hec
    laws/Monoid.hec

source-repository head
    type:     git
    location: http://github.com/haskell/containers.git

Library
    build-depends: base >= 4.2 && < 5, array, deepseq >= 1.2 && < 1.4
    if impl(ghc>=6.10)
        build-depends: ghc-prim

    ghc-options: -O2 -Wall

    exposed-modules:
        Data.IntMap
        Data.IntMap.Lazy
        Data.IntMap.Strict
        Data.IntSet
        Data.Map
        Data.Map.Lazy
        Data.Map.Strict
        Data.Set
    if !impl(nhc98)
        exposed-modules:
            Data.Graph
            Data.Sequence
            Data.Tree
    other-modules:
        Data.BitUtil
        Data.IntMap.Base
        Data.IntSet.Base
        Data.Map.Base
        Data.Set.Base
        Data.StrictPair

    include-dirs: include

    if impl(ghc<7.0)
        extensions: MagicHash, DeriveDataTypeable, StandaloneDeriving, Rank2Types
    if impl(ghc >= 7.8)
        extensions: RoleAnnotations

-------------------
-- T E S T I N G --
-------------------

-- Every test-suite contains the build-depends and options of the library,
-- plus the testing stuff.

-- Because the test-suites cannot contain conditionals in GHC 7.0, the extensions
-- are switched on for every compiler to allow GHC < 7.0 to compile the tests
-- (because GHC < 7.0 cannot handle conditional LANGUAGE pragmas).
-- When testing with GHC < 7.0 is not needed, the extensions should be removed.

Test-suite hermit-proofs
    hs-source-dirs: laws, .
    main-is: Laws.hs
    type: exitcode-stdio-1.0

    build-depends: base >= 4.2 && < 5, array, deepseq >= 1.2 && < 1.4, ghc-prim, hermit == 1.0.*
    ghc-options: -O2 -dcore-lint
                 -fexpose-all-unfoldings
                 -fplugin=HERMIT
                 -fplugin-opt=HERMIT:Main:laws/Functor.hec
                 -fplugin-opt=HERMIT:Main:laws/Monoid.hec
                 -fplugin-opt=HERMIT:Main:resume


